# LUME

./: .gitignore  API_SPECIFICATION.md  BL-1200-hardware.md  BUILD_GUIDE.md  ESP32_API_IMPROVEMENTS.md  INSTALL.md  LIGHTING_CONTROLLER.md  README.md  UPDATE_FEATURES.md  VERSION.md  generate_icons.py  package-lock.json  sonar-project.properties
.github/: CODE_SIGNING_SETUP.md  WORKFLOWS.md
.github/instructions/: WroomESP32-PINS.instructions.md
.github/workflows/: build.yml  release.yml  sonarqube.yml  version-bump.yml
docs/: RGB_LED_Wiring_Diagram.md
src/: ApiTest  firework_controller.ino
src/channel_test_sketch/: channel_test_sketch.ino
src/firework_controller/: firework_controller.ino
src/lighting_controller/: lighting_controller.ino
src/lume_base/: lume_base.ino
src/lume_desk/: .env  .env.example  LOGGING_GUIDE.md  README.md  debug-update.html  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  test-logs.js  vite.config.ts
src/lume_desk/.github/: copilot-instructions.md
src/lume_desk/src/: App.css  App.tsx  index.css  main.tsx  vite-env.d.ts
src/lume_desk/src-tauri/: Cargo.toml  tauri.conf.json
src/lume_desk/src-tauri/src/: commands.rs  lib.rs
src/lume_desk/src/components/: AboutModal.tsx  AddControllerModal.tsx  ControllerCard.tsx  Dashboard.tsx  EnhancedShowTimeline.tsx  FireworkTypeCard.tsx  FireworkTypeManager.tsx  FireworkTypeModal.tsx  Header.tsx  LightingControls.tsx  LightingEffectManager.tsx  LogViewer.tsx  (+5 more)
src/test_minimal_wifi/: test_minimal_wifi.ino
src/test_no_wifi/: test_no_wifi.ino
(+12 files in other folders)
